Fixed #6768 - Horizontal scrollable table header borders missing on IE

--- a/src/app/components/table/table.css
+++ b/src/app/components/table/table.css
@@ -70,10 +70,6 @@
     position: relative;
 }
 
-.ui-table-scrollable-body > table > .ui-table-tbody > tr:first-child > td {
-    border-top: 0 none;
-}
-
 .ui-table-virtual-table {
     position: absolute;
 }
